syntax = "proto3";

package exocore.core;

import "exocore/apps/manifest.proto";

message LocalNodeConfig {
    string keypair = 1;

    string public_key = 2;

    string name = 3;

    string id = 4;

    string path = 5;

    NodeAddresses addresses = 6;

    repeated NodeCellConfig cells = 7;

    StoreConfig store = 8;
}

message NodeAddresses {
    repeated string p2p = 1;

    repeated string http = 2;
}

message NodeCellConfig {
    oneof location {
       CellConfig instance = 1;
       string directory = 2;
    }
}

message StoreConfig {
    EntityIndexConfig index = 1;
}

message EntityIndexConfig {
    uint64 chain_index_min_depth = 1;

    uint64 chain_index_depth_leeway = 2;

    MutationIndexConfig pending_index_config = 3;

    MutationIndexConfig chain_index_config = 4;

    bool chain_index_in_memory = 5;    
}

message MutationIndexConfig {        
    uint64 indexer_num_threads = 1;
    uint64 indexer_heap_size_bytes = 2;

    uint32 iterator_page_size = 3;
    uint64 iterator_max_pages = 4;

    uint64 entity_mutations_cache_size = 5;

    uint32 dynamic_reference_fields = 6;
    uint32 dynamic_string_fields = 7;
    uint32 dynamic_text_fields = 8;
    uint32 dynamic_i64_fields = 9;
    uint32 dynamic_i64_sortable_fields = 10;
    uint32 dynamic_u64_fields = 11;
    uint32 dynamic_u64_sortable_fields = 12;
}

message CellConfig {
    string public_key = 1;

    string keypair = 2;

    string name = 3;

    string id = 4;

    string path = 5;

    repeated CellNodeConfig nodes = 6;

    repeated CellApplicationConfig apps = 7;
}

message CellNodeConfig {
    NodeConfig node = 1;

    repeated Role roles = 2;

    enum Role {
        INVALID_ROLE = 0;
        CHAIN_ROLE = 1;
        STORE_ROLE = 2;
    }
}

message NodeConfig {
    string public_key = 1;

    string name = 2;

    string id = 3;

    NodeAddresses addresses = 4;
}

message CellApplicationConfig {
    oneof location {
        exocore.apps.Manifest inline = 1;
        string path = 2;
    }
}